stop misaligning h tags on purpose

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -304,25 +304,21 @@ POST/ARTICLE HEADERS
 *****************************************/
 .card-content > h1 {
   	font-size: 210%;
-    margin-left: 10px;
 	font-family:'Slabo 27px', serif;
 }
 
 .card-content > h2 {
 	font-size: 180%;
-  	margin-left: 10px;
 	font-family:'Slabo 27px', serif;
 }
 
 .card-content > h3 {
 	font-size: 165%;
-  	margin-left: 10px;
 	font-family:'Slabo 27px', serif;
 }
 
 .card-content > h4 {
 	font-size: 140%;
- 	margin-left: 10px;
 	font-family:'Slabo 27px', serif;
 }
 
